--- a/laser_2-1/laser_detection.ipynb
+++ b/laser_2-1/laser_detection.ipynb
@@ -17,14 +17,23 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "IMPORTING ULTRALYTICS LIBRARY\n"
+      ],
+      "metadata": {
+        "id": "gQX4BGX0D-LL"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IjqqMs85QZRS",
-        "outputId": "17de1756-4fb1-4b61-ceed-0f2702e63375"
+        "outputId": "f35e481c-bdf1-42b4-955d-4f346407382c"
       },
       "outputs": [
         {
@@ -55,8 +64,17 @@
       "metadata": {
         "id": "b67noeDnQg7p"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "IMPORTING DATASET FROM ROBOFLOW(WITH YAML FILE WHICH CONTAINS NO OF CLASSES AND TRAIN VAL LOCATIONS"
+      ],
+      "metadata": {
+        "id": "uNQ9haS7ENe4"
+      }
     },
     {
       "cell_type": "code",
@@ -74,7 +92,7 @@
         "id": "WPZdmRRdQteF",
         "outputId": "5bc6ad1e-882b-4b9d-dfc2-eaf6958cb622"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,30 +116,39 @@
     {
       "cell_type": "code",
       "source": [
-        "%cd /content/laser_2-1"
+        "%cd /content/drive/MyDrive/laser_2-1"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RSVyQmFjQ1BK",
-        "outputId": "85a5ab14-2eec-4d27-9d6e-94b260dcd234"
+        "outputId": "5158bbc4-0c6a-4add-81e3-eb85d3bfdccb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/laser_2-1\n"
+            "/content/drive/MyDrive/laser_2-1\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "TRAINING CUSTOM YOLOV8 MODEL"
+      ],
+      "metadata": {
+        "id": "NYYcBv5WEkoK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "model = YOLO('yolov8n.yaml')\n",
+        "model = YOLO('yolov8n.yaml')#nano\n",
         "model.train(data='data.yaml', epochs=50)"
       ],
       "metadata": {
@@ -131,7 +158,7 @@
         "id": "ZItbqFasRLrs",
         "outputId": "05ed4e4d-d0a3-477f-98a3-55a7c0c60d28"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,6 +506,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "TESTING THE TRAINED MODEL ON A SAMPLE VIDEO FOR VERIFICATION"
+      ],
+      "metadata": {
+        "id": "qBuitgRaFBgw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import cv2\n",
@@ -525,7 +561,7 @@
         "id": "7G7WTIfxRmVa",
         "outputId": "3750b813-fcf2-45e7-ea35-b624b762e4e4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1406,6 +1442,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "DETECTION ON A SAMPLE VIDEO AND SAVING THE VIDEO IN CORRESPODING OUTPUT PATH"
+      ],
+      "metadata": {
+        "id": "LKVGRT1oFM1u"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import cv2\n",
@@ -1413,7 +1458,7 @@
         "from ultralytics import YOLO\n",
         "\n",
         "# Load the YOLOv8 model\n",
-        "model = YOLO('/content/laser_2-1/runs/detect/train/weights/best.pt')\n",
+        "model = YOLO('/content/drive/MyDrive/laser_2-1/runs/detect/train/weights/best.pt')\n",
         "\n",
         "# Open the video file\n",
         "video_path = \"/content/drive/MyDrive/pexels-cottonbro-studio-8923305-4096x2160-25fps.mp4\"\n",
@@ -1466,7 +1511,7 @@
         "id": "puXejAnsT4tJ",
         "outputId": "ccddb91e-78c2-4c4a-e980-356244b9b113"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2350,7 +2395,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "r9RbQzejVjBl"
+        "id": "W46jIS6z4v1K"
       },
       "execution_count": null,
       "outputs": []
